testsuite/poke.pkl/sub-integers-overflow-diag-1.pk
/* { dg-do compile } */

var res
  = (0x80000000U as int) - 1; /* { dg-error "overflow" } */
